# game_test

./: CMakeLists.txt  lucidity.code-workspace  test.cpp
lib/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/include/glad/: glad.h
lib/src/: glad.c
shaders/: sprite.frag  sprite.vert  tilemap.frag  tilemap.vert  triangle.frag  triangle.vert
src/: camera.cpp  collisionmap.cpp  game.cpp  globals.cpp  lucidity.cpp  map.cpp  renderer.cpp  shader.cpp  sprite.cpp  texture.cpp
src/headers/: camera.hpp  collisionmap.hpp  game.hpp  gl.hpp  globals.hpp  map.hpp  renderer.hpp  sceneobject.hpp  shader.hpp  sprite.hpp  texture.hpp
